docs: add root CLAUDE.md, trim style.md to non-derivable rules
- Cut generic Java/Kotlin syntax enumerations (derivable from context7/model
  knowledge); keep policies, complexity budgets, repo exemplars
- Fix 4 stale exemplar paths (practice/*.java -> practice/graph/**)
- Fix 'always when' -> if for binary, when for 3+ (Kotlin convention)
- Add CLAUDE.md: build/test/spotless commands, module layout, buildSrc